--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>TO-DO LIST</title>
-  <link rel="stylesheet" href="net.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>TO-DO List</h1>
@@ -13,6 +13,7 @@
     <button onclick="del()">Delete Task</button><br><br>
     <p id="ans"></p>
   </div>
-  <script src="net.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
